[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'Fang-CMS'
version = '2024.01.25'
description = 'A Blog CMS written in Flask'
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]

license = {file = "LICENSE"}
authors = [
    { name="Tyler Gautney", email="tyler.gautney@codedragon.dev"},
]
readme='README.md'
requires-python = ">=3.11"
dependencies = [
    'Flask',
    'Flask-SQLAlchemy',
    'MarkupSafe',
    'mistune==2.0.2',
    'psycopg2-binary',
    'pycryptodomex',
    'pyotp',
    'python-dotenv',
    'pywarp',
    'segno',
]

[tool.setuptools]
packages = ["Fang"]

[project.optional-dependencies]
production = ["gunicorn"]

[project.urls]
Homepage = 'https://github.com/LinuxDragon57/Fang-CMS'
